Stop distributing JRE with Gyro
This causes issue on macOS when it's not signed.