@@ -5,9 +5,4 @@ rm -rf dist/gyro-rt
 
 cd dist
 
-jlink --no-header-files \
-    --no-man-pages \
-    --add-modules java.logging,java.management,java.naming,java.scripting,java.xml,jdk.unsupported,jdk.xml.dom,java.desktop,java.instrument,java.compiler,java.sql,jdk.crypto.ec \
-    --output gyro-rt
-
-zip -r gyro-cli-${OS_NAME}-${VERSION}.zip gyro-rt gyro
+zip -r gyro-cli-${OS_NAME}-${VERSION}.zip gyro
